# whitenet-subscription-page

./: .env.sample  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: __init__.py  mappers.py  middlewares.py  page_renderer.py  router.py  schemas.py
backend/src/application/: dto.py  ports.py  use_cases.py
backend/src/domain/: exceptions.py  models.py  services.py  value_objects.py
backend/src/infrastructure/: mappers.py  remnawave_gateway.py
backend/src/setup/: config.py  logging.py
backend/src/setup/di/: __init__.py  ioc.py  providers.py
frontend/: index.html
frontend/assets/: style.css
frontend/assets/app/: app.css  choose-platform&client.js  footer.css  get-user.js  glass-panel.css  guide.css  header.css  platform.css  responsive.css  vpn-client.css
frontend/assets/app/QR/: QR-modal.css  QR-modal.js
frontend/assets/app/user-status/: user-status.css  user-status.js
frontend/assets/libs/: telegram-web-app.js
frontend/assets/starfield/: starfield.css  starfield.js
