[project]
name = "whitenet-subscription-page"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.10.1",
    "fastapi>=0.137.2",
    "httpx>=0.27.2,<0.28.0",
    "loguru>=0.7.3",
    "pydantic<2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["venv", ".venv", ".idea", "tests"]

lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]

lint.ignore = [
    "N805",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

exclude = [
    "venv",
    ".venv",
    ".idea",
    "tests",
]

python_version = "3.13"

follow_imports = "silent"

warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true

disallow_subclassing_any = true
disallow_any_generics = true

no_implicit_reexport = true
strict_equality = true
extra_checks = true
explicit_package_bases = true

pretty = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
